# solana-winternitz-vault-fungible-tokens

./: Cargo.toml  Readme.md
src/: errors.rs  lib.rs  tests.rs
src/instructions/: close_vault.rs  mod.rs  open_token_vault  open_vault.rs  split_token_vault.rs  split_vault.rs  token_vault.rs  vault_instructions.rs
src/state/: mod.rs
tests/: token-vault.ts
