[package]
name = "solana-winternitz-vault"
description = "Winternitz quantum-resistant vault for Solana"
authors = ["Dean Little <@deanmlittle>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.6.0"
pinocchio-system = "0.2.0"
solana-nostd-sha256 = "0.1.3"
solana-winternitz = "0.1.0"

[dev-dependencies]
mollusk-svm = "0.0.13"
solana-sdk = "2.0.0"